# playground-series-s6e6

./: README.md  main.py  predicting_stellar_class.ipynb  pyproject.toml  submission.csv
